--- a/enrolment/static/sass/landing-page-tablet.scss
+++ b/enrolment/static/sass/landing-page-tablet.scss
@@ -56,6 +56,37 @@
     }
   }
   
+  #fabhome-howto {
+    ol {
+      li {
+        span {
+          font-size: 14px;
+        }
+       
+        &:before {
+          font-size: 100px;
+        }
+        
+        &:first-child {
+          span {
+            padding-left: 62px;
+          }
+        }
+      }
+      
+      span {
+        padding-left: 83px;
+      }
+    }
+    
+    strong {
+      font-size: 17px;
+      &:before {
+        font-size: 110px;
+      }
+    }
+  }
+  
   #fabhome-intro {
     .register-company-number-form {
       .button {
@@ -68,24 +99,6 @@
       .text {
         width: 100%;
       }
-    }
-  }
-  
-  #fabhome-howto {
-    ol {
-      li {
-        span {
-          font-size: 14px;
-        }
-      }
-    
-      li::before {
-        font-size: 100px;
-      }
-    }
-    
-    strong {
-      font-size: 17px;
     }
   }
   
@@ -102,16 +115,31 @@
 
 @media (max-width: 640px) {
   #fabhome-howto {
+
+  }
+}
+
+
+@media (max-width: 560px) {
+  #fabhome-howto {
     ol {
-      li {
-        &::before {
-          font-size: 75px;
+      li:first-child {
+        span {
+          padding-left: 57px;
         }
+      }
+      
+      span {
+        padding-left: 67px;
       }
     }
     
     strong {
       font-size: 15px;
+      &::before {
+        font-size: 100px;
+        margin-right: 10px;
+      }
     }
   }
 }
